--- a/requirements.txt
+++ b/requirements.txt
@@ -1,111 +1,77 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.2
-aiosignal==1.4.0
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.11.0
+aiohttp==3.9.5
+aiosignal==1.3.1
+altair==5.3.0
+annotated-types==0.6.0
 async-timeout==4.0.3
-attrs==25.4.0
-beautifulsoup4==4.14.2
-blinker==1.9.0
-cachetools==5.5.2
-certifi==2025.10.5
-cffi==2.0.0
-charset-normalizer==3.4.4
-click==8.3.0
-colorama==0.4.6
-curl-cffi==0.13.0
+attrs==23.2.0
+beautifulsoup4==4.12.3
+blinker==1.8.2
+cachetools==5.3.3
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+curl_cffi==0.6.3
 dataclasses-json==0.5.14
-distro==1.9.0
-duckduckgo-search==5.3.0
-exceptiongroup==1.3.0
-frozenlist==1.8.0
-gitdb==4.0.12
-gitpython==3.1.45
-greenlet==3.2.4
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-httpx-sse==0.4.3
-idna==3.11
+duckduckgo_search==5.3.0
+frozenlist==1.4.1
+gitdb==4.0.11
+GitPython==3.1.43
+greenlet==3.0.3
+idna==3.7
 importlib-metadata==6.11.0
-jinja2==3.1.6
-jiter==0.11.1
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.25.1
-jsonschema-specifications==2025.9.1
+Jinja2==3.1.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
 langchain==0.0.292
-langchain-classic==1.0.0
-langchain-community==0.4.1
-langchain-core==1.0.4
-langchain-openai==1.0.2
-langchain-text-splitters==1.0.0
-langgraph==1.0.2
-langgraph-checkpoint==3.0.1
-langgraph-prebuilt==1.0.2
-langgraph-sdk==0.2.9
 langsmith==0.0.92
-lxml==6.0.2
-markdown-it-py==4.0.0
-markupsafe==3.0.3
-marshmallow==3.26.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.21.2
 mdurl==0.1.2
-multidict==6.7.0
-mypy-extensions==1.1.0
-narwhals==2.10.1
-numexpr==2.14.1
+multidict==6.0.5
+mypy-extensions==1.0.0
+numexpr==2.10.0
 numpy==1.26.4
 openai==0.28.0
-orjson==3.11.4
-ormsgpack==1.12.0
-packaging==25.0
-pandas==2.3.3
-pillow==9.5.0
-primp==0.15.0
-propcache==0.4.1
-protobuf==4.25.8
-pyarrow==22.0.0
-pycparser==2.23
-pydantic==2.12.4
-pydantic-core==2.41.5
-pydantic-settings==2.11.0
-pydeck==0.9.1
-pygments==2.19.2
-pympler==1.1
+orjson==3.10.3
+packaging==23.2
+pandas==2.2.2
+Pillow==9.5.0
+protobuf==4.25.3
+pyarrow==16.0.0
+pycparser==2.22
+pydantic==2.7.1
+pydantic_core==2.18.2
+pydeck==0.9.0
+Pygments==2.18.0
+Pympler==1.0.1
 python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
-pytz==2025.2
+python-dotenv==1.0.0
+pytz==2024.1
 pytz-deprecation-shim==0.1.0.post0
-pywin32==311
-pyyaml==6.0.3
-referencing==0.37.0
-regex==2025.11.3
-requests==2.32.5
-requests-toolbelt==1.0.0
-rich==13.9.4
-rpds-py==0.28.0
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-soupsieve==2.8
-sqlalchemy==2.0.44
+PyYAML==6.0.1
+referencing==0.35.1
+requests==2.31.0
+rich==13.7.1
+rpds-py==0.18.1
+six==1.16.0
+smmap==5.0.1
+soupsieve==2.5
+SQLAlchemy==2.0.30
 streamlit==1.26.0
-tenacity==8.5.0
-tiktoken==0.12.0
+tenacity==8.2.3
 toml==0.10.2
-tornado==6.5.2
-tqdm==4.67.1
-typing-extensions==4.15.0
+toolz==0.12.1
+tornado==6.4
+tqdm==4.66.4
 typing-inspect==0.9.0
-typing-inspection==0.4.2
-tzdata==2025.2
+typing_extensions==4.11.0
+tzdata==2024.1
 tzlocal==4.3.1
-urllib3==2.5.0
-validators==0.35.0
-watchdog==6.0.0
+urllib3==2.2.1
+validators==0.28.1
+watchdog==4.0.0
 wikipedia==1.4.0
-xxhash==3.6.0
-yarl==1.22.0
-zipp==3.23.0
-zstandard==0.25.0
+yarl==1.9.4
+zipp==3.18.1
